bundled_metadata/force-app/main/default/objects/AssortmentProduct/fields/AssortmentExtID__c.field-meta.xml
<CustomField>
    <fullName>AssortmentExtID__c</fullName>
    <description>This will be used to link to AssortmentId below</description>
    <label>Assortment ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>