bundled_metadata/force-app/main/default/objects/AssortmentProduct/fields/AssortmentName__c.field-meta.xml
<CustomField>
    <fullName>AssortmentName__c</fullName>
    <label>Assortment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>