bundled_metadata/force-app/main/default/objects/AssortmentProduct/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <formula>Text(Assortment.Market__c)</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>