bundled_metadata/force-app/main/default/objects/AssortmentProduct/fields/ProductExtID__c.field-meta.xml
<CustomField>
    <fullName>ProductExtID__c</fullName>
    <externalId>true</externalId>
    <label>Product External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>