bundled_metadata/force-app/main/default/objects/AssortmentProduct/fields/ProducttName__c.field-meta.xml
<CustomField>
    <fullName>ProducttName__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>