bundled_metadata/force-app/main/default/objects/AssortmentProduct/fields/StockKeepingUnit__c.field-meta.xml
<CustomField>
    <fullName>StockKeepingUnit__c</fullName>
    <description>This will be used to link to productId</description>
    <label>Product SKU</label>
    <length>40</length>
    <type>Text</type>
</CustomField>